# fastAPI-acceleration

./: README.md  main.py  pyproject.toml
