[project]
name = "fastapi-acceleration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "uvicorn>=0.34.3",
]
